--- a/styles/light.css
+++ b/styles/light.css
@@ -3,44 +3,48 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+ .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  .page.theme_light {
-    --main-text-color: #353430;
-    --title-color: #ffc2e6;
-    --title-shadow: #ff0070;
-    --title-decor: #ff8dcb;
-    --hover-color: 1px solid rgba(50, 49, 45, 0.4);
-    --background-color: #fff1f7;
-    --background-image: url(../images/cover-image-light.png);
-    --article-title-color: var(--main-text-color);
-    --section-title-color: var(--main-text-color);
-    --border-color: var(--title-shadow);
-    --corners-color: var(--main-text-color);
-    --link-shadow: var(--title-color);
-    --rec-color: var(--background-color);
-  }
-  
-  .page.theme_light .header__rec {
-    display: none;
-  }
+  --accent-color: #ff8dcb;
+  --background-color: #fff1f7;
+  --text-color: #353430;
+  --title-color: #ffc2e6;
+  --main-text-color: #353430;
+  --accent-text-color: #353430;
+  --button-color: #353430;
+  --decor-element-color: #353430;
+  --btn-hover-color: rgba(50, 49, 45, 0.4);
+  --btn-focus-color: #353430;
+  --btn-active-color: #353430;
+  --link-hover-color: #353430;
+  --link-focus-color: #353430;
+  --title-size-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --title-size-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --visibility-rec: hidden;
+  --background-image: url("../images/cover-image-light.png");
+}
 
-  @media (prefers-color-scheme: light) {
-    :root {
-      --main-text-color: #353430;
-      --title-color: #ffc2e6;
-      --title-shadow: #ff0070;
-      --title-decor: #ff8dcb;
-      --hover-color: 1px solid rgba(50, 49, 45, 0.4);
-      --background-color: #fff1f7;
-      --background-image: url(../images/cover-image-light.png);
-      --article-title-color: var(--main-text-color);
-      --section-title-color: var(--main-text-color);
-      --border-color: var(--title-shadow);
-      --corners-color: var(--main-text-color);
-      --link-shadow: var(--title-color);
-      --rec-color: var(--background-color);
-    }
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #ff8dcb;
+    --background-color: #fff1f7;
+    --text-color: #353430;
+    --title-color: #ffc2e6;
+    --main-text-color: #353430;
+    --accent-text-color: #353430;
+    --button-color: #353430;
+    --decor-element-color: #353430;
+    --btn-hover-color: rgba(50, 49, 45, 0.4);
+    --btn-focus-color: #353430;
+    --btn-active-color: #353430;
+    --link-hover-color: #353430;
+    --link-focus-color: #353430;
+    --title-size-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --title-size-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --visibility-rec: hidden;
+    --background-image: url("../images/cover-image-light.png");
   }
+}
