--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,20 @@
 :root {
-  --font-family: "IBM Plex mono", sans-serif;
+  --accent-color: #ff0070;
+  --background-color: #000028;
+  --text-color: #000028;
+  --title-color: #db00ff;
+  --main-text-color: #f1b2ce;
+  --accent-text-color: #FF0070;
+  --button-color: #ff0070;
+  --decor-element-color: #ff0070;
+  --btn-hover-color: rgba(255, 0, 112, 0.4);
+  --btn-focus-color: #ff0070;
+  --btn-active-color: #ff0070;
+  --link-hover-color: #f1b2ce;
+  --link-focus-color: #f1b2ce;
+  --title-size-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --title-size-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --visibility-rec: visible;
+  --background-image: url("../images/cover-image-dark.png");
+  --main-font: "IBM Plex mono", "Arial", monospace;
 }
-
