--- a/styles/style.css
+++ b/styles/style.css
@@ -135,6 +135,24 @@
   margin-block-end: 50px;
 }
 
+.main_section  {
+  display: grid;
+  gap: 20px;
+} 
+
+/*.main_container-concentrate,
+.main_card-container,
+.main_container-advice,
+.main_pictures {
+  display: grid;
+  gap: 20px;
+}
+/* 
+.main_card-container {
+  display: grid;
+  gap: 20px;
+} */
+
 .main_link {
   text-decoration: none;
   text-shadow: 2px 2px 0px var(--accent-color);
@@ -157,16 +175,20 @@
   color: var(--accent-text-color);
   font-size: 18px;
   line-height: 23.4px;
-  padding-bottom: 20px;
 }
 
 .main_subtitle {
   background-color: var(--accent-color);
   color: var(--text-color);
-  line-height: 23.4px; 
+  line-height: 23.4px;
   font-weight: 700;
-  margin-block-end: 10px;
   font-size: 18px;
+}
+
+.section_wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .main_container-advice .section_wrap .main_subtitle {
@@ -175,13 +197,15 @@
 
 .main_container-advice .section_wrap .main_subtitle-special {
   font-weight: 700;
-  margin-block-end: 20px;
+}
+
+.main_container-gallery {
+  grid-template-columns: 1fr;
+  justify-content: center;
 }
 
 .main_container-gallery {
   display: grid;
-  grid-template-columns: 354.999px;
-  justify-content: center;
   gap: 10px;
 }
 
@@ -192,11 +216,18 @@
   font-style: normal;
   font-weight: 400;
   line-height: 23.4px;
-  padding-block-end: 20px;
 }
+
+.main_article {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}  
 
 .main_article:last-of-type .main_text {
   padding-block-end: 0px;
+  display: grid;
+  gap: 20px;
 }
 
 .main_img {
@@ -221,7 +252,64 @@
   text-shadow: 2px 2px 0px var(--accent-color);
 }
 
-@media (width >= 768px) {
+.alone_main_title {
+  /* margin-bottom: 20px !important; */
+}
+
+@media (width <=375px) {
+  .header {
+    padding: 10px;
+    width: 375px;
+    height: 668px;
+  }
+
+  .content {
+    width: 375px;
+    height: 949px;
+    top: 708px;
+    padding: 0, 10px, 0, 10px;
+  }
+
+  .main_title {
+    width: 355px;
+    height: 47px;
+    left: 10px;
+  }
+
+  .main_text {
+    width: 355px;
+  }
+
+  .footer {
+    width: 375px;
+    height: 668px !important;
+    top: 4361px;
+  }
+
+  .alone_main_title {
+    margin-bottom: 20px !important;
+  }
+
+  .decorated-zone::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    inline-size: 25px;
+    block-size: 25px;
+    inset-inline-end: 10px;
+    inset-block-start: 10px;
+    border-top: 1px solid var(--decor-element-color);
+    border-right: 1px solid var(--decor-element-color);
+  }
+
+  .main_pictures {
+    gap: 10px;
+} 
+}
+
+
+@media (width >=768px) {
 
   .header {
     padding: 20px;
@@ -260,14 +348,11 @@
     margin-block-end: 80px;
   }
 
-  .main_book {
-    padding-block-end: 20px;
-  }
-
   .main_container-concentrate {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 0 20px;
+    gap: 
   }
 
   .main_container-concentrate .main_title {
@@ -282,6 +367,10 @@
   .main_card-container .main_title {
     max-inline-size: calc((100% - 50px) / 3);
   }
+
+  .main_pictures {
+    gap: 20px;
+} 
 
   .main_container-advice {
     display: grid;
@@ -298,7 +387,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr auto 1.60fr;
     gap: 20px;
-    padding-block-start: 10px;
+    contain: inline-size;
   }
 
   .main_container-gallery .img_sunset {
@@ -307,6 +396,7 @@
     grid-row-start: 1;
     grid-row-end: 2;
   }
+
   .main_container-gallery .img_icecream {
     grid-column-start: 3;
     grid-column-end: 4;
@@ -346,7 +436,7 @@
 
 }
 
-@media (width >= 1024px) {
+@media (width >=1024px) {
 
   .header {
     grid-template-columns: 1fr;
@@ -384,6 +474,10 @@
     gap: 0 10px;
   }
 
+  .main_card-container .main_text {
+    min-height: 360px;
+  }
+
   .main_card-container {
     display: flex;
     flex-direction: column;
@@ -416,4 +510,3 @@
   }
 
 }
-
