--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,8 @@
   background-position: center;
   background-attachment: fixed;
   font-size: 18px;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -115,7 +117,6 @@
   font-size: var(--title-size-mobile);
   color: var(--title-color);
   text-shadow: 4px 4px 0px var(--accent-color);
-  font-style: normal;
   line-height: 82.5%;
 }
 
@@ -139,19 +140,6 @@
   display: grid;
   gap: 20px;
 } 
-
-/*.main_container-concentrate,
-.main_card-container,
-.main_container-advice,
-.main_pictures {
-  display: grid;
-  gap: 20px;
-}
-/* 
-.main_card-container {
-  display: grid;
-  gap: 20px;
-} */
 
 .main_link {
   text-decoration: none;
@@ -213,7 +201,6 @@
   color: var(--main-text-color);
   font-family: var(--main-font);
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
   line-height: 23.4px;
 }
@@ -224,10 +211,10 @@
   gap: 10px;
 }  
 
-.main_article:last-of-type .main_text {
+.main_article:last-of-type {
   padding-block-end: 0px;
-  display: grid;
-  gap: 20px;
+  display: flex;  
+  gap: 10px;
 }
 
 .main_img {
@@ -252,60 +239,33 @@
   text-shadow: 2px 2px 0px var(--accent-color);
 }
 
-.alone_main_title {
-  /* margin-bottom: 20px !important; */
-}
-
 @media (width <=375px) {
   .header {
     padding: 10px;
-    width: 375px;
-    height: 668px;
-  }
-
-  .content {
-    width: 375px;
-    height: 949px;
-    top: 708px;
-    padding: 0, 10px, 0, 10px;
   }
 
   .main_title {
-    width: 355px;
-    height: 47px;
     left: 10px;
-  }
-
-  .main_text {
-    width: 355px;
-  }
-
-  .footer {
-    width: 375px;
-    height: 668px !important;
-    top: 4361px;
-  }
-
-  .alone_main_title {
-    margin-bottom: 20px !important;
-  }
-
-  .decorated-zone::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    inline-size: 25px;
-    block-size: 25px;
-    inset-inline-end: 10px;
-    inset-block-start: 10px;
-    border-top: 1px solid var(--decor-element-color);
-    border-right: 1px solid var(--decor-element-color);
   }
 
   .main_pictures {
     gap: 10px;
-} 
+  } 
+}
+
+@media (width < 768px) {
+
+  .content {
+    margin: 39px 10px 55px 10px;
+  }
+
+  .main_container-gallery  {
+    gap: 6px;
+  }
+  .footer {
+    padding: 30px 10px 20px 10px;
+  }
+
 }
 
 
@@ -332,6 +292,7 @@
 
   .title {
     place-self: start;
+    margin-top: 2px;
     font-size: var(--title-size-desktop);
     margin-inline-start: -20px;
   }
@@ -352,7 +313,6 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 0 20px;
-    gap: 
   }
 
   .main_container-concentrate .main_title {
@@ -386,7 +346,7 @@
   .main_container-gallery {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr auto 1.60fr;
-    gap: 20px;
+    gap: 15px;
     contain: inline-size;
   }
 
@@ -436,6 +396,14 @@
 
 }
 
+@media (width >=768px) and (max-width: 1023px) {
+
+  .footer  {
+    padding-bottom: 18px;
+  }
+
+}
+
 @media (width >=1024px) {
 
   .header {
@@ -470,12 +438,30 @@
     place-self: start;
   }
 
-  .main_container-concentrate {
-    gap: 0 10px;
+  .header .title {
+    margin-top: 112px;
   }
 
-  .main_card-container .main_text {
-    min-height: 360px;
+  .header {
+    padding-bottom: 137px;
+    block-size: auto;
+    min-block-size: 100vh;
+  }
+
+  .footer .title {
+    margin-top: 0;
+  }
+
+  .header_subtitle {
+    margin-top: 116px;
+  }
+
+  .content {
+    margin: 58px 20px;
+  }
+
+  .main_container-concentrate {
+    gap: 0 10px;
   }
 
   .main_card-container {
@@ -507,6 +493,7 @@
 
   .footer {
     min-block-size: 768px;
+    padding-bottom: 10px;
   }
 
 }
